# stat_manager

./: CLAUDE.md  Cargo.toml  README.md  flake.nix
config/: constants.toml  dots.toml
example_game/: Cargo.toml
example_game/config/affix_pools/: default.toml
example_game/config/affixes/: armour.toml  weapon.toml
example_game/config/base_types/: accessories.toml  armour.toml  weapons.toml
example_game/config/currencies/: crafting.toml
example_game/src/: main.rs
stat_core/: Cargo.toml  README.md
stat_core/config/: skills.toml
stat_core/src/: lib.rs  prelude.rs  types.rs
stat_core/src/combat/: mod.rs  resolution.rs  result.rs
stat_core/src/config/: constants.rs  dots.rs  mod.rs  skills.rs
stat_core/src/damage/: calculation.rs  generator.rs  mod.rs  packet.rs
stat_core/src/defense/: armour.rs  evasion.rs  mod.rs  resistance.rs
stat_core/src/dot/: active.rs  mod.rs  tick.rs  types.rs
stat_core/src/source/: base_stats.rs  buff.rs  gear.rs  mod.rs  skill_tree.rs
stat_core/src/stat_block/: aggregator.rs  computed.rs  mod.rs  stat_value.rs
stat_tui/: Cargo.toml
stat_tui/data/: items.json
stat_tui/src/: app.rs  commands.rs  main.rs  main.rs.test  simulation.rs  ui.rs
stat_tui/src/ui/: breakdown_view.rs  combat_view.rs  equipment_view.rs  help_view.rs  skills_view.rs  stat_view.rs
stat_tui/tests/: integration_test.rs
