[workspace]
members = ["stat_core", "stat_tui", "example_game"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Luke"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
thiserror = "1.0"
