[package]
name = "example_game"
version.workspace = true
edition.workspace = true
description = "Simple example game demonstrating stat_core and loot_core"

[dependencies]
stat_core = { path = "../stat_core" }
loot_core = { path = "../../loot_generator/loot_core" }
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
rand_chacha = "0.3"
