[package]
name = "stat_core"
version.workspace = true
edition.workspace = true
description = "Core stat management library for game entities"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rand.workspace = true
thiserror.workspace = true
loot_core = { path = "../../loot_generator/loot_core" }

[dev-dependencies]
proptest = "1.4"
