[package]
name = "stat_tui"
version.workspace = true
edition.workspace = true
description = "Interactive TUI for stat management testing and visualization"

[dependencies]
stat_core = { path = "../stat_core" }
loot_core = { path = "../../loot_generator/loot_core" }
ratatui = "0.29"
crossterm = "0.28"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rand.workspace = true
thiserror.workspace = true
